Style fix in subpage/handle positioning to prevent text jumping on hover.

--- a/assets/scss/_page-listing.scss
+++ b/assets/scss/_page-listing.scss
@@ -193,6 +193,9 @@
 		display: inline-block;
 		cursor: move;
 		font-size: 20px;
+		margin-top: -8px;
+		position: relative;
+		top: 2px;
 		color: darken($white, 30%);
 		transition: all 200ms ease;
 		&:hover {
@@ -205,7 +208,7 @@
 	.np-icon-sub-menu {
 		display: none;
 		color: darken($white, 40%);
-		margin-top: 2px;
+		// margin-top: 10px;
 	}
 
 	.row.no-sort .page-title {
